# wrapit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.cmake
buildtools/: print-cxxwrap-path.jl
doc/: FAQ.md  README.md  config.md  operator_mapping.md  (+1 more)
examples/: CMakeLists.txt
examples/ex001-HelloWorld/: .gitignore  A.h  CMakeLists.txt  Hello.wit  Makefile  README.md  build.jl  demo_Hello.jl  install.jl  runtests.jl  setup.sh  test.jl
examples/ex001-HelloWorld/.ipynb_checkpoints/: Untitled4-checkpoint.ipynb  Untitled5-checkpoint.ipynb  demo_Hello-checkpoint.ipynb
examples/ex002-ROOT/: .gitignore  Extra.h  Makefile  README.md  ROOT.jl  ROOT.wit  ROOTex.jl  TBranchPtr.h  Templates.h  demo_ROOT.jl  demo_TGraph.jl  demo_fit_with_jl_func.jl  demo_fit_with_jl_func_2.jl  iROOT.jl  install.jl  jlROOT-veto.h  setup.csh  setup.sh
examples/ex002-ROOT/ROOT/src/: ROOT.jl
examples/ex002-ROOT/TTree_examples/: README.md  read_tree1.jl  read_tree2.jl  read_tree3.jl  write_tree1.jl  write_tree2.jl  write_tree3.jl
examples/ex003-Types/: A.h  CMakeLists.txt  Hello.wit.in  Manifest.toml  README.md  build.jl  demo_Hello.jl  runtests.jl  setup.sh.in  test.jl
src/: Graph.h  (+26 more)
test/: .gitignore  CMakeLists.txt  Project.toml  WrapitTestSetup.cmake  build.jl  make.rules  print-cxxwrap-path.jl  runtests.jl  test_examples.jl
test/TestAbstractClass/: A.h  CMakeLists.txt  TestAbstractClass.wit  compileandrun  runTestAbstractClass.jl
test/TestAccessAndDelete/: .gitignore  A.h  CMakeLists.txt  Makefile  TestAccessAndDelete.h  TestAccessAndDelete.wit  TestAccessAndDelete.wit.in  runTestAccessAndDelete.jl  runtests.jl  setup.sh  test.jl  testAccessAndDelete.jl
test/TestAnonymousStruct/: A.h  CMakeLists.txt  Makefile  TestAnonymousStruct.wit  compileandrun  runTestAnonymousStruct.jl
test/TestAutoAdd/: .gdb_history  .gitignore  A.h  B.h  CMakeLists.txt  Makefile  TestAutoAdd.wit  compileandrun  runTestAutoAdd.jl  setup.sh
test/TestCtorDefVal/: .gitignore  A.h  CMakeLists.txt  Makefile  TestCtorDefVal.h  TestCtorDefVal.wit  TestCtorDefVal.wit.in  compileandrun  jlTestCtorDefVal.cxx.ref  runTestCtorDefVal.jl  runtests.jl  setup.sh  test.jl  testCtorDefVal.jl
test/TestDeduplication/: A.h  CMakeLists.txt  TestDeduplication.wit  compileandrun  runTestDeduplication.jl
test/TestEmptyClass/: .gitignore  A.h  CMakeLists.txt  Makefile  TestEmptyClass.wit  compileandrun  runTestEmptyClass.jl  setup.sh  vetoTestEmplyClass.txt
test/TestEnum/: .gitignore  A.h  CMakeLists.txt  Makefile  TestEnum.wit  compileandrun  runTestEnum.jl  setup.sh
test/TestFuncPtr/: CMakeLists.txt  TestFuncPtr.wit  compileandrun  funcptr.cxx  runTestFuncPtr.jl
test/TestIncompleteArray/: A.h  Makefile  TestIncompleteArray.wit  runTestIncompleteArray.jl  setup.sh
test/TestInheritance/: .gitignore  A.h  C.h  CMakeLists.txt  D.h  Makefile  MyString.h  String.h  TestInheritance.wit  WARNING  compileandrun  runTestInheritance.jl  setup.sh
test/TestMultipleInheritanceOff/: A.h  C.h  CMakeLists.txt  MyString.h  TestMultipleInheritanceOff.wit  WARNING  compileandrun  runTestMultipleInheritanceOff.jl
test/TestNamespace/: .gitignore  A.h  CMakeLists.txt  Makefile  TestNamespace.wit  compileandrun  runTestNamespace.jl  setup.sh
test/TestNoFinalizer/: .gitignore  A.cc  A.d  A.h  CMakeLists.txt  Makefile  TestNoFinalizer.wit  compileandrun  jlTestNoFinalizer.cxx.ref  runTestNoFinalizer.jl  setup.sh
test/TestOperators/: .gitignore  A.h  CMakeLists.txt  Makefile  TestOperators.wit  compileandrun  runTestOperators.jl  setup.sh
test/TestOrder/: .gitignore  A.cc  A.h  CMakeLists.txt  Makefile  TestOrder.wit  compileandrun  runTestOrder.jl  setup.sh
test/TestPointers/: .gitignore  A.h  CMakeLists.txt  Makefile  TestPointers.wit  compileandrun  cxxtest.cc  runTestPointers.jl  setup.sh
test/TestPropagation/: .gitignore  A.h  B1.h  B2.h  Makefile  README  TestPropagation1.wit  TestPropagation2.wit  TestPropagation3.wit  compileandtest  runTestPropagation.jl  runTestPropagation1.jl  runTestPropagation2.jl  runTestPropagation3.jl  setup.sh
test/TestSizet/: .gitignore  A.h  CMakeLists.txt  Makefile  TestSizet.wit  compileandrun  runTestSizet.jl  setup.sh
test/TestStdString/: .gitignore  CMakeLists.txt  Makefile  TestStdString.h  TestStdString.wit  TestStdString.wit.in  compileandrun  runTestStdString.jl  runtests.jl  setup.sh  test.jl  testStdString.jl
test/TestStdVector/: .gitignore  A.cxx  A.h  CMakeLists.txt  Makefile  TestStdVector.wit  TestStdVector.wit.in  compileandrun  runTestStdVector.jl  setup.sh  testStdVector.jl
test/TestStringView/: .gitignore  A.h  CMakeLists.txt  Makefile  TestStringView.wit  compileandrun  jlTestStringView.cxx.ref  runTestStringView.jl  setup.sh
test/TestTemplate1/: .gitignore  A.h  CMakeLists.txt  Makefile  TestTemplate1.wit  compileandrun  runTestTemplate1.jl  setup.sh
test/TestTemplate2/: .gitignore  A.h  CMakeLists.txt  Makefile  TestTemplate2.wit  compileandrun  jlTestTemplate2.jl  runTestTemplate2.jl  setup.sh
test/TestUsingType/: .gitignore  A.h  CMakeLists.txt  Makefile  TestUsingType.wit  compileandrun  runTestUsingType.jl  setup.sh
test/TestVarField/: .gitignore  A.cc  A.cxx  A.h  C.h  Makefile  Makefile.off  Makefile.on  TestVarField.wit  TestVarFieldOff.wit  TestVarFieldOn.wit  runTestVarField.jl  runTestVarFieldOff.jl  runTestVarFieldOn.jl  setup.sh
test/not_yet_working_cases/: make.rules
test/not_yet_working_cases/TestBlackBox/: A.h  ISSUE.md  Makefile  TestBlackBox.wit  runTestBlackBox.jl
test/not_yet_working_cases/TestFstream/: ISSUE.md  Makefile  TestFstream.wit  fstream_def.h  runTestFstream.jl
test/not_yet_working_cases/TestTemplate3/: A.h  ISSUE.md  Makefile  TestTemplate3.wit  jlTestTemplate3.cxx.ref  jlTestTemplate3.cxx.ref2  runTestTemplate3.jl
test/not_yet_working_cases/TestTemplate4/: A.h  ISSUE.md  Makefile  TestTemplate4.wit  jlTestTemplate4.cxx.ref  runTestTemplate4.jl
test/not_yet_working_cases/TestTemplateInheritance/: A.h  ISSUE.md  Makefile  TestTemplateInheritance.wit  jlTestTemplateInheritance.cxx.ref  runTestTemplateInheritance.jl
(+2 files in other folders)
